test/asm/break.err
warning: break.asm(9): [-Wuser]
    done 5
warning: break.asm(17): [-Wuser]
    OK
error: Unterminated IF construct (1 levels)!
